# airpusher-sign-teensy

./: .gitignore  CMakeLists.txt  README.md  build.sh  version.h.in
MCUXpresso/: .cproject  .project  airpusher-sign.mex
MCUXpresso/board/: board.c  clock_config.c  clock_config.h  dcd.c  peripherals.c  peripherals.h  pin_mux.c
MCUXpresso/device/: MIMXRT1062.h  system_MIMXRT1062.c
MCUXpresso/linkscripts/: data.ldt  main_rodata.ldt  main_text.ldt  section_tail.ldt  section_top.ldt
MCUXpresso/source/: airpusher-sign.cpp  color.cpp  color.h  cpp_config.cpp  debugled.c  debugled.h  effects.cpp  effects.h  fastmath.h  ledpwm.cpp  ledpwm.h  leds.cpp  leds.h  sign.cpp  sign.h  timeline.cpp  timeline.h  usb_device_interface_0_cic_vcom.c  vector.h
MCUXpresso/source/gcem/gcem_incl/: exp.hpp
MCUXpresso/startup/: startup_mimxrt1062.cpp
MCUXpresso/utilities/: fsl_debug_console_conf.h
MCUXpresso/xip/: evkmimxrt1060_flexspi_nor_config.c
MCUXpressoExtra/: airpusher-sign.ld  syscalls.c
cmake/: arm-gcc-toolchain.cmake  clang-arm-gcc-toolchain.cmake  clang_utils.cmake
support/: exportPoints.js  mapping.csv
